--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^1.10.1"
   },
   "dependencies": {
+    "alt": "^0.17.1",
     "react": "^0.13.3",
     "remarkable": "^1.6.0"
   }
